@@ -12,12 +12,14 @@ import com.jcabi.xml.XML;
 import com.jcabi.xml.XMLDocument;
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.stream.Collectors;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
@@ -52,8 +54,9 @@ import org.xembly.Xembler;
     defaultPhase = LifecyclePhase.PROCESS_SOURCES,
     threadSafe = true
 )
-@SuppressWarnings("PMD.TooManyMethods")
+@SuppressWarnings({"PMD.TooManyMethods", "PMD.GodClass"})
 public final class MjLint extends MjSafe {
+
     /**
      * The directory where to transpile to.
      */
@@ -85,11 +88,13 @@ public final class MjLint extends MjSafe {
         counts.putIfAbsent(Severity.CRITICAL, 0);
         counts.putIfAbsent(Severity.ERROR, 0);
         counts.putIfAbsent(Severity.WARNING, 0);
+        final Collection<Defect> seen = new ConcurrentLinkedQueue<>();
         if (!this.skipSourceLints.isEmpty()) {
             Logger.info(this, "Unlinting source lints: %[list]s", this.skipSourceLints);
         }
         final int passed = new Threaded<>(
-            tojos, tojo -> this.lintOne(tojo, counts, this.skipSourceLints.toArray(new String[0]))
+            tojos,
+            tojo -> this.lintOne(tojo, counts, seen, this.skipSourceLints.toArray(new String[0]))
         ).total();
         if (tojos.isEmpty()) {
             Logger.info(this, "There are no XMIR programs, nothing to lint individually");
@@ -98,7 +103,7 @@ public final class MjLint extends MjSafe {
             Logger.info(
                 this,
                 "XMIR programs linted as a package: %d",
-                this.lintAll(counts)
+                this.lintAll(counts, seen)
             );
         } else {
             Logger.info(
@@ -117,18 +122,26 @@ public final class MjLint extends MjSafe {
             "Read more about lints: https://www.objectionary.com/lints/%s",
             Manifests.read("Lints-Version")
         );
+        final String details = seen.stream().map(
+            defect -> String.format(
+                "%s:%d %s (%s)",
+                defect.object(), defect.line(), defect.text(), defect.rule()
+            )
+            )
+            .collect(Collectors.joining(System.lineSeparator()));
         if (counts.get(Severity.ERROR) > 0 || counts.get(Severity.CRITICAL) > 0) {
             throw new IllegalStateException(
                 String.format(
-                    "In %d XMIR files, we found %s (must stop here)",
-                    tojos.size(), sum
+                    "In %d XMIR files, we found %s (must stop here):%n%s",
+                    tojos.size(), sum, details
                 )
             );
-        } else if (counts.get(Severity.WARNING) > 0 && this.failOnWarning) {
+        }
+        if (counts.get(Severity.WARNING) > 0 && this.failOnWarning) {
             throw new IllegalStateException(
                 String.format(
-                    "In %d XMIR files, we found %s (use -Deo.failOnWarning=false to ignore)",
-                    tojos.size(), sum
+                    "In %d XMIR files, we found %s (use -Deo.failOnWarning=false to ignore):%n%s",
+                    tojos.size(), sum, details
                 )
             );
         }
@@ -138,20 +151,23 @@ public final class MjLint extends MjSafe {
      * XMIR verified to another XMIR.
      * @param tojo Foreign tojo
      * @param counts Counts of errors, warnings, and critical
+     * @param seen Defects seen so far across all files
      * @param unlints Lints to skip
      * @return Amount of passed tojos (1 if passed, 0 if errors)
      * @throws Exception If failed to lint
+     * @checkstyle ParameterNumberCheck (10 lines)
      */
     private int lintOne(
         final TjForeign tojo,
         final Map<Severity, Integer> counts,
+        final Collection<Defect> seen,
         final String... unlints
     ) throws Exception {
         final Path source = tojo.xmir();
         final XML xmir = new XMLDocument(source);
         final Path base = this.targetDir.toPath().resolve(MjLint.DIR);
         final Path target = new Place(
-            new OnDetailed(new OnDefault(xmir), source).get()
+            new OnDetailed(new OnDefault(new Xnav(xmir.inner())), source).get()
         ).make(base, MjAssemble.XMIR);
         if (this.cacheEnabled) {
             new ConcurrentCache(
@@ -179,6 +195,7 @@ public final class MjLint extends MjSafe {
         for (final Defect defect : defects) {
             if (MjLint.notSuppressed(checked, defect)) {
                 counts.compute(defect.severity(), (sev, before) -> before + 1);
+                seen.add(defect);
                 MjLint.logOne(defect);
             }
         }
@@ -189,10 +206,14 @@ public final class MjLint extends MjSafe {
     /**
      * Lint all XMIR files together.
      * @param counts Counts of errors, warnings, and critical
+     * @param seen Defects seen so far across all files
      * @return Amount of seen XMIR files
      * @throws IOException If failed to lint
      */
-    private int lintAll(final Map<Severity, Integer> counts) throws IOException {
+    private int lintAll(
+        final Map<Severity, Integer> counts,
+        final Collection<Defect> seen
+    ) throws IOException {
         final Map<String, Path> paths = new HashMap<>();
         for (final TjForeign tojo : this.scopedTojos().withXmir()) {
             paths.put(tojo.identifier(), tojo.xmir());
@@ -209,7 +230,7 @@ public final class MjLint extends MjSafe {
         }
         final List<Defect> defects;
         if (this.cacheEnabled) {
-            final Path wpa = Path.of("wpa.xmir");
+            final Path wpa = Paths.get("wpa.xmir");
             final Path target = this.targetDir.toPath().resolve(MjLint.DIR).resolve(wpa);
             new Cache(
                 this.cache.toPath().resolve(MjLint.CACHE),
@@ -235,6 +256,7 @@ public final class MjLint extends MjSafe {
         }
         for (final Defect defect : defects) {
             counts.compute(defect.severity(), (sev, before) -> before + 1);
+            seen.add(defect);
         }
         return pkg.size();
     }
@@ -245,8 +267,7 @@ public final class MjLint extends MjSafe {
             .without(this.skipProgramLints.toArray(new String[0]))
             .defects()
             .stream()
-            .filter(defect -> this.skipExperimentalLints || !defect.experimental())
-            .forEach(
+            .filter(defect -> this.skipExperimentalLints || !defect.experimental()).forEach(
                 defect -> {
                     final Node node = pkg.get(defect.object()).inner();
                     new Xembler(
@@ -282,8 +303,7 @@ public final class MjLint extends MjSafe {
         final Collection<Defect> found = new Source(xmir)
             .without(unlints)
             .defects()
-            .stream()
-            .filter(
+            .stream().filter(
                 defect -> this.skipExperimentalLints || !defect.experimental()
             ).collect(Collectors.toList());
         defects.addAll(found);
@@ -391,38 +411,45 @@ public final class MjLint extends MjSafe {
         return xnav
             .element("object")
             .elements(Filter.withName("errors"))
-            .findFirst()
-            .map(
+            .findFirst().map(
                 errors -> errors
                     .elements(Filter.withName("error"))
-                    .map(
-                        error -> (Defect) new Defect.Default(
-                            error.attribute("check").text().orElseThrow(
-                                () -> new IllegalArgumentException(
-                                    "The <error> element in XMIR must contain 'check' attribute"
-                                )
-                            ),
-                            Severity.parsed(
-                                error.attribute("severity").text().orElseThrow(
-                                    () -> new IllegalArgumentException(
-                                        "The <error> element in XMIR must contain 'severity' attribute"
-                                    )
-                                )
-                            ),
-                            program,
-                            Integer.parseInt(
-                                error.attribute("line").text().orElse("0")
-                            ),
-                            error.text().orElseThrow(
-                                () -> new IllegalStateException(
-                                    "The <error> element in XMIR must contain text message"
-                                )
-                            )
-                        )
-                    )
+                    .map(error -> MjLint.toDefect(program, error))
                     .collect(Collectors.toList())
             )
             .orElse(new ListOf<>());
+    }
+
+    /**
+     * Convert XMIR error element to a {@link Defect}.
+     * @param program Program name
+     * @param error The error element
+     * @return Defect
+     */
+    private static Defect toDefect(final String program, final Xnav error) {
+        return new Defect.Default(
+            error.attribute("check").text().orElseThrow(
+                () -> new IllegalArgumentException(
+                    "The <error> element in XMIR must contain 'check' attribute"
+                )
+            ),
+            Severity.parsed(
+                error.attribute("severity").text().orElseThrow(
+                    () -> new IllegalArgumentException(
+                        "The <error> element in XMIR must contain 'severity' attribute"
+                    )
+                )
+            ),
+            program,
+            Integer.parseInt(
+                error.attribute("line").text().orElse("0")
+            ),
+            error.text().orElseThrow(
+                () -> new IllegalStateException(
+                    "The <error> element in XMIR must contain text message"
+                )
+            )
+        );
     }
 
     /**
@@ -452,9 +479,9 @@ public final class MjLint extends MjSafe {
             node -> new Defect.Default(
                 node.attribute("check").text().orElseThrow(),
                 Severity.parsed(node.attribute("severity").text().orElseThrow()),
-                "",
-                0,
-                ""
+                node.attribute("object").text().orElse(""),
+                Integer.parseInt(node.attribute("line").text().orElse("0")),
+                node.text().orElse("")
             )
         ).collect(Collectors.toList());
     }
